--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Marcus0224/Employee-Tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "inquirer": "^8.2.2",
     "mysql2": "^2.3.3"
